🐛 : : Fixed minor alignment issues.

--- a/src/App.css
+++ b/src/App.css
@@ -313,7 +313,8 @@
 
 .newsUpdateContent {
     max-height: 200px;
-    overflow: auto
+    overflow: auto;
+    padding-right: 20px;
 }
 
 .MuiFormHelperText-root.Mui-error {
@@ -639,6 +640,8 @@ label {
     color: #337ab7 !important;
 }
 
+
+/* 
 @media only screen and (max-width: 1300px) {
     .newsUpdateContent {
         padding-right: 25px;
@@ -655,4 +658,4 @@ label {
     .newsUpdateContent:hover {
         padding-right: 15px;
     }
-}
+} */
